# FileSystem

./: CMakeLists.txt  command.cpp  commonfunc.cpp  commonfunc.h  filecommand.cpp  filecommand.h  init.cpp  init.h  load.cpp  load.h  main.cpp  structHeader.h
commandvalidator/: commandvalidator.cpp  commandvalidator.h
initerloader/: initerloader.cpp  initerloader.h
report/: .~lock.Отчет.docx#  copy.eap  create.eap  init.eap  load.eap  ls.eap  ls.ldb  move.eap  read.eap  remove.eap  write.eap  Отчет.docx
structheader/: structHeader.h
